flexbox] fixed margin for scrollbar margin
Enact-DCO-1.0-Signed-off-by: YB Sung (yb.sung@lge.com)

--- a/packages/moonstone/Scroller/Scrollbar.less
+++ b/packages/moonstone/Scroller/Scrollbar.less
@@ -27,7 +27,11 @@
 	}
 
 	&.corner {
-		-webkit-padding-end: 80px;
+		-webkit-padding-end: @moon-icon-button-small-size;
+
+		:global(.enact-text-large) & {
+			-webkit-padding-end: @moon-icon-button-small-size-large;
+		}
 	}
 
 	/* ScrollButton */
